build based on 67dbdc0

--- a/dev/index.html
+++ b/dev/index.html
@@ -29,7 +29,7 @@
       However, even for this figure in the main article, the value for i_stim
       is only given as &quot;k x Threshold&quot; with some numeric value for k
       and no clear definition of what the threshold value is.
-      d_pulse is given as 350 ms, but we obtained a better fit with d_pulse =
+      d_hold is given as 350 ms, but we obtained a better fit with d_hold =
       300 ms.
       i_hold is not given, but can be assumed to be zero.</p>
       <p>NOTE: For AN and NH cells the voltage plot shows a lower resting
@@ -76,7 +76,7 @@
       However, even for this figure in the main article, the value for i_stim
       is only given as &amp;quot;k x Threshold&amp;quot; with some numeric value for k
       and no clear definition of what the threshold value is.
-      d_pulse is given as 350 ms, but we obtained a better fit with d_pulse =
+      d_hold is given as 350 ms, but we obtained a better fit with d_hold =
       300 ms.
       i_hold is not given, but can be assumed to be zero.&lt;/p&gt;
       &lt;p&gt;NOTE: For AN and NH cells the voltage plot shows a lower resting
@@ -85,4 +85,4 @@
       in figure S7.&lt;/p&gt;
     &lt;/html&gt;
   &quot;));
-end AllCells;</code></pre></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Friday 15 January 2021 17:26">Friday 15 January 2021</span>. Using Julia version 1.5.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+end AllCells;</code></pre></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Tuesday 19 January 2021 17:12">Tuesday 19 January 2021</span>. Using Julia version 1.5.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
